INCLUDE_DIRECTORIES(${PKMDS_SOURCE_DIR}/include)

ADD_EXECUTABLE(pkmds-pc-sorter main.cpp)
IF(CMAKE_COMPILER_IS_GNUCXX)
    #Needed for scoped enums
    SET_TARGET_PROPERTIES(pkmds-pc-sorter PROPERTIES COMPILE_FLAGS "-std=c++0x")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
TARGET_LINK_LIBRARIES(pkmds-pc-sorter pkmds)

INSTALL(TARGETS pkmds-pc-sorter RUNTIME DESTINATION ${RUNTIME_DIR} COMPONENT Runtime)
