INCLUDE_DIRECTORIES(${PKMDS_SOURCE_DIR}/include)

ADD_EXECUTABLE(pkmds-g5-sample pkmds-g5-sample.cpp)
IF(CMAKE_COMPILER_IS_GNUCXX)
    #Needed for scoped enums
    SET_TARGET_PROPERTIES(pkmds-g5-sample PROPERTIES COMPILE_FLAGS "-std=c++0x")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
TARGET_LINK_LIBRARIES(pkmds-g5-sample pkmds)

INSTALL(TARGETS pkmds-g5-sample RUNTIME DESTINATION ${RUNTIME_DIR} COMPONENT Runtime)
